--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GAMER studio</title>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <header id="heading">
+        <div class="logo">
+            <img src="./images/Frame.png" width="50px">
+            <h5><span id="logo1">G</span>amer</h5>
+        </div>
+        <nav id="menu">
+            <ul>
+                <li><a href="">About US</a></li>
+                <li><a href="">Developer</a></li>
+                <li class="Follow-section"><a href="">Follow Us On <i class="fa-brands fa-youtube"></i><i class="fa-brands fa-tiktok"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="goat-section">
+
+            <div>
+                <h1 id="play-like">Play Like The</h1>
+                <h1 id="Goat">G.O.A.T.</h1>
+                <p><i class="fa-brands fa-youtube"></i>   1-Click instant play</p> 
+                <p><i class="fa-solid fa-file-arrow-down"></i>   No Download</p> 
+                <p><i class="fa-solid fa-person"></i>   1000s of supported online games</p>
+                <button class="btn1">Sign IN</button> <button class="btn2">Go Rogue</button>
+            </div>
+            <div><img src="./images/Group 18.png">
+            </div>
+        </section>
+
+        <section id="gamer-section">
+            <div id="gamer-section-img">
+                <img src="./images/pngwing 4.png">
+            </div>
+            <div id="gamers">
+                <h3 id="we-are-gamer">We are gamer</h3>
+                <p id="gamers-description">An international digital games and entertainment company. We develop,
+                    publish and distribute multiplayer mobile games. We reach over 400 million players each month and
+                    our audience keeps growing.</p><br>
+                <button class="btn1">know more</button><br>
+                <p>Our purpose...</p>
+                <h3>“unleash the gamer in everyone”</h3>
+            </div>
+        </section>
+
+ 
+
 </body>
+
 </html>
